# blue-sim

./: README.md
.devcontainer/nouveau/: devcontainer.json
.devcontainer/nvidia/: devcontainer.json
.devcontainer/robot/: devcontainer.json
.docker/: Dockerfile  Dockerfile.humble
.docker/compose/: nouveau-desktop.yaml  nvidia-desktop.yaml
.github/workflows/: ci.yaml  docker.yaml
blue_bringup/launch/bluerov2_heavy/: bluerov2_heavy.launch.yaml
blue_control/: CMakeLists.txt  package.xml
blue_control/description/urdf/: bluerov2.config.xacro  bluerov2_heavy.config.xacro
blue_control/launch/: controllers.launch.py  controllers_heavy.launch.py
blue_description/description/bluerov2_heavy/: urdf.xacro
blue_description/description/camera/: gazebo.xacro
blue_description/meshes/bluerov2_heavy/: bluerov2_heavy_collision.dae
blue_localization/blue_localization/: localizer.py
blue_sim/: CMakeLists.txt  package.xml  setup.cfg  setup.py
blue_sim/blue_sim/: ardusub_bridge.py  ardusub_init.py
blue_sim/launch/: sim.launch.py
blue_teleop/: CMakeLists.txt  package.xml
blue_teleop/config/: teleop_transforms.yaml
blue_teleop/launch/: joystick.launch.yaml  keyboard.launch.py
