<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>blue_control</name>
  <version>0.0.1</version>
  <description>Motion controllers for BlueROV2 (ISMC, TAM, thruster curves)</description>
  <maintainer email="todo@todo.com">blue</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>message_transforms</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
