<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>blue_sim</name>
  <version>0.0.0</version>
  <description>Simulation launch and ArduSub interface nodes for BlueROV2</description>
  <maintainer email="alanchoi.uni@gmail.com">ubuntu</maintainer>
  <license>MIT</license>

  <exec_depend>blue_bringup</exec_depend>
  <exec_depend>blue_teleop</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
